# Rvc-android-lspatch

./: README.md  build.gradle  gradle.properties
.github/workflows/: build_apk.yml
app/: build.gradle  build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: xposed_init
app/src/main/cpp/: CMakeLists.txt  rvc_engine.cpp
app/src/main/cpp/audio/: oboe_duplex.cpp
app/src/main/cpp/dsp/: fx_graph.cpp  fx_graph.h
app/src/main/cpp/inference/: ie_manager.cpp
app/src/main/cpp/security/: lock_manager.cpp  lock_manager.h
app/src/main/java/com/rvc/app/: MainActivity.kt  ModelScannerService.kt  ProfileManager.kt
app/src/main/java/com/rvc/app/data/: ModelInfo.kt
app/src/main/java/com/rvc/patch/: HookEntry.kt  IPCManager.kt
app/src/main/res/layout/: activity_main.xml
